# catapult

./: .gitignore  Cargo.toml  Cross.toml  DIFFERENCES.md  LICENSE  README.md  cat-monitor-spec.md
.github/workflows/: ci.yml  release.yml
cat-bridge/: Cargo.toml  sdkconfig.defaults
cat-bridge/.cargo/: config.toml
cat-bridge/src/: main.rs
cat-desktop/: Cargo.toml  build.rs
cat-desktop/src/: amp_task.rs  app.rs  async_serial.rs  diagnostics_layer.rs  firmware.rs  firmware_panel.rs  main.rs  port_info.rs  radio_panel.rs  serial_io.rs  settings.rs  simulation_panel.rs  traffic_monitor.rs  virtual_radio_task.rs
cat-desktop/src/app/: amplifier.rs  events.rs  mod.rs  ports.rs  radio.rs  status.rs  ui_panels.rs
cat-desktop/src/traffic_monitor/: cache.rs  export.rs  ingest.rs  mod.rs  models.rs  ui.rs
crates/cat-detect/: Cargo.toml
crates/cat-detect/src/: error.rs  lib.rs  probe.rs  scanner.rs  usb_ids.rs
crates/cat-mux/: Cargo.toml
crates/cat-mux/src/: actor.rs  amplifier.rs  async_amp.rs  async_radio.rs  channel.rs  codec.rs  engine.rs  error.rs  events.rs  lib.rs  state.rs  translation.rs
crates/cat-mux/tests/: integration_tests.rs
crates/cat-protocol/: Cargo.toml
crates/cat-protocol/src/: command.rs  display.rs  elecraft.rs  error.rs  flex.rs  icom.rs  kenwood.rs  lib.rs  models.rs  yaesu.rs  yaesu_ascii.rs
crates/cat-sim/: Cargo.toml
crates/cat-sim/src/: amplifier.rs  amplifier_task.rs  context.rs  lib.rs  radio.rs  radio_task.rs
docs/: .gitignore  ARCHITECTURE.md  README.md  book.toml  worker.js  wrangler.jsonc  wrangler.toml
docs/src/: 404.md  SUMMARY.md  amplifier.md  connecting-radios.md  getting-started.md  introduction.md  switching-modes.md  troubleshooting.md
docs/src/architecture/: multiplexer.md  overview.md  translation.md
docs/src/development/: building.md  contributing.md
docs/src/protocols/: elecraft.md  flexradio.md  icom.md  kenwood.md  overview.md  yaesu-ascii.md  yaesu.md
docs/src/simulation/: overview.md  virtual-radios.md
plans/: multiplexer-integration-tests.md
