[workspace]

[package]
name = "cat-bridge"
version = "0.1.0"
edition = "2021"
authors = ["M Alonso"]
license = "MIT"
description = "ESP32-S3 dual USB serial bridge firmware - allows host computer to appear as USB serial device to amplifier"

[dependencies]
# ESP-HAL for ESP32-S3 (1.0.0 ecosystem)
esp-hal = { version = "1.0", features = ["esp32s3", "unstable"] }
esp-rtos = { version = "0.2", features = ["esp32s3", "embassy"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16", features = ["esp32s3", "log-04"] }
esp-alloc = "0.9"

# Embassy async runtime
embassy-executor = "0.9"
embassy-time = "0.5"
embassy-sync = "0.7"
embassy-usb = "0.5"

# Embedded I/O traits
embedded-io-async = "0.6"

# Logging
log = "0.4"

# Static cell for singleton patterns
static_cell = "2"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
