[package]
name = "cat-detect"
description = "Serial port enumeration for CAT-capable amateur radio transceivers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serialport.workspace = true
thiserror.workspace = true
tracing.workspace = true
