[package]
name = "cat-sim"
description = "Simulation layer for CAT protocol testing without physical hardware"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cat-protocol = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
